--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,23 +8,28 @@
                              "data-turbolinks-track" => true %>
   <%= csrf_meta_tag %>
 </head>
-<body class="<%= controller.controller_name %>">
-<div id="banner">
-  <%= image_tag("logo.png") %>
-  <%= @page_title || "Pragmatic Bookshelf" %>
-</div>
-<div id="columns">
-  <div id="side">
-    <ul>
-      <li><a href="http://www....">Home</a></li>
-      <li><a href="http://www..../faq">Questions</a></li>
-      <li><a href="http://www..../news">News</a></li>
-      <li><a href="http://www..../contact">Contact</a></li>
-    </ul>
+<body class=" <%= controller.controller_name %> ">
+
+<nav class="navbar navbar-inverse navbar-static-top">
+  <div class="container-fluid">
+  <%= render('layouts/navbar') %>
   </div>
-  <div id="main">
-    <%= yield %>
-  </div>
+</nav>
+
+<!-- carousel -->
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <%= render('layouts/carousel') %>
 </div>
+<!-- /.carousel -->
+
+
+
+<div class="container-fluid marketing">
+    <div class="row">
+          <%= yield %>
+    </div>
+</div>
+
+
 </body>
 </html>
