--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,22 +1,20 @@
 
-<% if notice %>
-    <p id="notice"><%= notice %></p>
-<% end %>
+     <% if notice %>
+         <p id="notice"><%= notice %></p>
+     <% end %>
 
+     <% cache ['store', Hotel.latest] do %>
+         <% @hotels.each do |hotel| %>
+             <div class="col-lg-3">
 
-<h1>Your Pragmatic Catalog</h1>
-<% cache ['store', Hotel.latest] do %>
-    <% @hotels.each do |hotel| %>
-        <% cache ['entry', hotel] do %>
-            <div class="entry">
-              <%= image_tag(hotel.image_url) %>
-              <h3><%= hotel.title %></h3>
-              <%= sanitize(hotel.description) %>
-              <div class="price_line">
-                <span class="price"><%= number_to_currency(hotel.price) %></span>
-              </div>
-            </div>
+             <% cache ['entry', hotel] do %>
+                 <%= image_tag hotel.image_url, class: "img-thumbnail",
+                               width: "200px", height: "150px" %>
+               <h2>  <%= hotel.title %> </h2>
+               <p>  <%= sanitize(hotel.description) %> </p>
+               <p>  <%= number_to_currency(hotel.price) %> </p>
 
-        <% end %>
-    <% end %>
-<% end %>
+             <% end %>
+             </div>
+         <% end %>
+     <% end %>
