--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,17 +9,15 @@
   <%= csrf_meta_tag %>
 </head>
 <body class=" <%= controller.controller_name %> ">
-
 <nav class="navbar navbar-inverse navbar-static-top">
   <div class="container-fluid">
   <%= render('layouts/navbar') %>
   </div>
 </nav>
-
 <!-- carousel -->
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <%= render('layouts/carousel') %>
-</div>
+  <div class="row">
+          <%= render('layouts/carousel') %>
+  </div>
 <!-- /.carousel -->
 
 
