--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -11,8 +11,8 @@
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#" class="waves-effect waves-light">Link <span class="sr-only">(current)</span></a></li>
-                        <li><a href="#" class="waves-effect waves-light">Link</a></li>
+                        <li class="active"><a href="../" class="waves-effect waves-light">Link <span class="sr-only">(current)</span></a></li>
+                        <li><a href="/hotels" class="waves-effect waves-light">Hotels</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle waves-effect waves-light" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
