--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,31 +1,29 @@
-        <div class="container">
-            <nav class="navbar default-color">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand waves-effect waves-light" href="#">Brand</a>
-                </div>
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="../" class="waves-effect waves-light">Link <span class="sr-only">(current)</span></a></li>
-                        <li><a href="/hotels" class="waves-effect waves-light">Hotels</a></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle waves-effect waves-light" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something else here</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#">Separated link</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#">One more separated link</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
+<div class="container">
+    <nav class="navbar default-color">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand waves-effect waves-light" href="/">Главная</a>
         </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="../" class="waves-effect waves-light">Link <span class="sr-only">(current)</span></a></li>
+                <li><a href="/hotels/list" class="waves-effect waves-light">Hotels</a></li>
+            </ul>
+            <ul class="nav navbar-nav pull-right">
+                <% if user_signed_in? %>
+                <li> <a href="/persons/profile" "email me">Logged in as <strong><%= current_user.email %></strong></a> </li>
+                <li> <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> </li>
+                <li><%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %></li>
+                <% else %>
+                <li><%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> </li>
+                <li> <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %></li>
+                <% end %>
+            </ul>
+        </div>
+    </nav>
+</div>
