--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -4,19 +4,27 @@ p {
     font-weight: 300;
 }
 
-.navbar{
+.navbar {
     margin-bottom: 0;
 }
+
 .card {
     position: relative;
     overflow: hidden;
-    margin: 0.5rem 0 1rem 0;
+    margin: 0.5rem 0 0.5rem 0;
     background-color: #fff;
     transition: box-shadow .25s;
     border-radius: 2px;
 }
 
+.card.hoverable .card-content{
+    height: 145px;
+    padding: 0px 10px;
+}
 
+.card .card-image img {
+    height: 150px;
+}
 
 p {
     font-size: 1.25rem;
@@ -33,6 +41,3 @@ p {
     vertical-align: middle;
 }
 
-footer.page-footer{
-        display: block;
-}
