--- a/app/views/hotels/show.html.erb
+++ b/app/views/hotels/show.html.erb
@@ -1,4 +1,3 @@
-<p id="notice"><%= notice %></p>
 
 <p>
   <strong>Title:</strong>
@@ -11,8 +10,11 @@
 </p>
 
 <p>
+<img src="<%= @hotel.image_url %>" alt="" class="img-responsive">  
+
   <strong>Image url:</strong>
   <%= @hotel.image_url %>
+
 </p>
 
 <p>
@@ -20,5 +22,9 @@
   <%= @hotel.price %>
 </p>
 
+<% if user_signed_in? %>
 <%= link_to 'Edit', edit_hotel_path(@hotel) %> |
+<% else %>
+<% end %>
+
 <%= link_to 'Back', hotels_path %>
